// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the ExpensesSummary component with expenses 1`] = `
<div>
  <h2>
    Expenses Summary
  </h2>
  <h3>
    Your total expenses amount is: 
    $1,141.95
  </h3>
</div>
`;

exports[`Should render the ExpensesSummary component with no expenses 1`] = `
<div>
  <h2>
    Expenses Summary
  </h2>
  <h3>
    Your total expenses amount is: 
    $0.00
  </h3>
</div>
`;
